Fix alignments of nav, contents and footer To better accomodate to smaller devices

--- a/src/input.css
+++ b/src/input.css
@@ -10,3 +10,11 @@ html {
   overflow-x: hidden;
   font-family: "Inter", sans-serif;
 }
+
+.bg-white {
+  background-color: white;
+}
+
+.text-black {
+  color: black;
+}
